--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Color Game</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
+
+    <h1>The GRB Color Game</h1>
+
+    <div id="container">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </div>
 
   </body>
 </html>
