--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-    <h1>The GRB Color Game</h1>
+    <h1>The RGB Color Game</h1>
 
     <div id="container">
       <div class="square"></div>
@@ -17,5 +17,6 @@
       <div class="square"></div>
     </div>
 
+    <script type="text/javascript" src="color_game.js"></script>
   </body>
 </html>
